--- a/app/src/main/res/layout/activity_characters.xml
+++ b/app/src/main/res/layout/activity_characters.xml
@@ -41,4 +41,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/rogue" />
 
+    <ImageButton
+        android:id="@+id/close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Its close exit button"
+        android:src="@android:drawable/btn_dialog"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
